--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -24,7 +24,7 @@ security:
                form_login:
                     login_path: pp_request_homepage
                     check_path: fos_user_security_check
-                    default_target_path: /
+                    default_target_path: pp_request_homepage
                logout:
                     path:   fos_user_security_logout
                     target: /
