--- a/src/PP/UserBundle/Resources/config/routing.yml
+++ b/src/PP/UserBundle/Resources/config/routing.yml
@@ -16,5 +16,6 @@ pp_user_edit:
     path:     /profile/edit
     defaults: { _controller: PPUserBundle:ShowUser:edit}
 
-    
- 
+pp_user_gallery:
+    path:     /{slug}/gallery
+    defaults: { _controller: PPUserBundle:ShowUser:gallery}
