Create popup app

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -42,7 +42,7 @@ assetic:
     debug:          "%kernel.debug%"
     use_controller: false
     bundles:        ["PPRequestBundle","PPUserBundle","PPDashboardBundle"]
-    ruby:           "D:/Program/Ruby22-x64/bin/ruby.exe"
+    ruby:           "%ruby%"
     #java: /usr/bin/java
     filters:
         cssrewrite: ~
