Report proposition + settings page start

--- a/src/PP/UserBundle/Resources/config/routing.yml
+++ b/src/PP/UserBundle/Resources/config/routing.yml
@@ -19,3 +19,8 @@ pp_user_edit:
 pp_user_gallery:
     path:     /{slug}/gallery
     defaults: { _controller: PPUserBundle:ShowUser:gallery}
+    
+pp_user_setting:
+    path:     /{slug}/settings
+    defaults: { _controller: PPUserBundle:Setting:index}
+    
