--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -78,6 +78,10 @@ pp_user_api:
     resource: "@PPUserBundle/Resources/config/routing_api.yml"
     prefix:   /api/user/
 
+fos_user_registration:
+    resource: "@FOSUserBundle/Resources/config/routing/registration.xml"
+    prefix: /registration
+
 fos_user_resetting:
     resource: "@FOSUserBundle/Resources/config/routing/resetting.xml"
     prefix: /resetting
