--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -11,7 +11,7 @@ security:
 
      providers:
           main:
-               id: fos_user.user_provider.username
+               id: fos_user.user_provider.username_email
 
      firewalls:
           #dev:
@@ -24,7 +24,6 @@ security:
                form_login:
                     login_path: pp_request_homepage
                     check_path: fos_user_security_check
-                    default_target_path: pp_request_homepage
                logout:
                     path:   fos_user_security_logout
                     target: /
@@ -32,5 +31,4 @@ security:
                 key:        %secret%
 
      access_control:
-          - { path: ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
           - { path: ^/dashboard/, roles: ROLE_MODERATOR }
