--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+page:
+    resource: "@PPPageBundle/Resources/config/routing.yml"
+    prefix:   /help/
+
 pp_comment:
     resource: "@PPCommentBundle/Resources/config/routing.yml"
     prefix:   /
