--- a/src/PP/PageBundle/Resources/config/routing.yml
+++ b/src/PP/PageBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
+page_help:
+    path:     /
+    defaults: { _controller: PPPageBundle:Page:help }
+
 page_about:
     path:     /about/
     defaults: { _controller: PPPageBundle:Page:about }
