--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+sitemap:
+    resource: "@SitemapBundle/Resources/config/routing.yml"
+    prefix:   /sitemap
+
 page:
     resource: "@PPPageBundle/Resources/config/routing.yml"
     prefix:   /help/
